crates/carta/tests/snapshots/golden_writer__beamer__image-dimensions__image-embedded-png.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
logo
\pandocbounded{\includegraphics[keepaspectratio,alt={alt}]{data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAADCAIAAAA7ljmRAAAAEElEQVR4nGP4z8AARww4OQD1MQv1NXv7ggAAAABJRU5ErkJggg==}}
\end{frame}
