crates/carta/tests/snapshots/golden_writer__beamer__image-dimensions__image-inline-dims.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
text
\includegraphics[width=2.08333in,height=\textheight,keepaspectratio,alt={alt}]{pic.png}
more
\end{frame}
